--- a/index.html
+++ b/index.html
@@ -737,7 +737,10 @@
                 <form action="" method="post" class="order_form" id="order_form">
                     <div class="form_group">
                         <label class="form_label">Выберите страну</label>
-                        <select name="country" id="country" class="country_select"></select>
+                        <select name="country" id="country" class="country_select">
+                            <option>Руссия</option>
+                            <option>Украина</option>
+                        </select>
                     </div>
                     <div class="form_group">
                         <label class="form_label">Ваше имя</label>
