--- a/index.html
+++ b/index.html
@@ -738,7 +738,8 @@
                     <div class="form_group">
                         <label class="form_label">Выберите страну</label>
                         <select name="country" id="country" class="country_select">
-                            <option>Руссия</option>
+                            <option>Россия</option>
+                            <option>Казахстан</option>
                             <option>Украина</option>
                         </select>
                     </div>
